--- a/DoIt/Base.lproj/Main.storyboard
+++ b/DoIt/Base.lproj/Main.storyboard
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2uA-IS-jvZ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--DoIt-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DoIt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="DoIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Ec-7T-fA4">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -34,12 +35,106 @@
                             <constraint firstAttribute="trailing" secondItem="5Ec-7T-fA4" secondAttribute="trailing" id="q5Y-zr-dXj"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="DoIt" id="fPW-nu-cfr">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="7ER-Ui-d7f"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="frg-KM-XEz">
+                            <connections>
+                                <action selector="onAddButtonPress:" destination="BYZ-38-t0r" id="yoe-Oc-eda"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="taskList" destination="5Ec-7T-fA4" id="v2o-Nd-ID7"/>
+                        <segue destination="wqD-FX-ix4" kind="show" identifier="addTaskSegue" id="3sc-iT-7Fx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="972" y="37.331334332833585"/>
+        </scene>
+        <!--Create Task View Controller-->
+        <scene sceneID="YeY-dW-I66">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="wqD-FX-ix4" customClass="CreateTaskViewController" customModule="DoIt" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="u7h-2p-ujn"/>
+                        <viewControllerLayoutGuide type="bottom" id="jCr-qI-yR2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fvq-iv-Ano">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P7l-eF-Esm">
+                                <rect key="frame" x="162.5" y="74" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m7H-ye-TXo">
+                                <rect key="frame" x="56" y="115" width="263" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CO3-Vz-CAm">
+                                <rect key="frame" x="147.5" y="175" width="80" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Odq-53-vpD">
+                                <rect key="frame" x="163" y="206" width="51" height="31"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0eD-9p-kEm">
+                                <rect key="frame" x="155.5" y="267" width="64" height="30"/>
+                                <state key="normal" title="Add Task"/>
+                                <connections>
+                                    <action selector="onAddTaskPressed:" destination="wqD-FX-ix4" eventType="touchUpInside" id="P3X-oV-SNC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="0eD-9p-kEm" firstAttribute="top" secondItem="Odq-53-vpD" secondAttribute="bottom" constant="30" id="7GY-xj-gl3"/>
+                            <constraint firstItem="P7l-eF-Esm" firstAttribute="centerX" secondItem="fvq-iv-Ano" secondAttribute="centerX" id="BAh-dd-KKO"/>
+                            <constraint firstItem="Odq-53-vpD" firstAttribute="top" secondItem="CO3-Vz-CAm" secondAttribute="bottom" constant="10" id="IrF-wQ-lOr"/>
+                            <constraint firstItem="CO3-Vz-CAm" firstAttribute="top" secondItem="m7H-ye-TXo" secondAttribute="bottom" constant="30" id="N6Z-QN-JWx"/>
+                            <constraint firstItem="CO3-Vz-CAm" firstAttribute="centerX" secondItem="fvq-iv-Ano" secondAttribute="centerX" id="NsR-UM-C98"/>
+                            <constraint firstItem="P7l-eF-Esm" firstAttribute="top" secondItem="u7h-2p-ujn" secondAttribute="bottom" constant="10" id="OL4-yc-LE2"/>
+                            <constraint firstItem="0eD-9p-kEm" firstAttribute="centerX" secondItem="fvq-iv-Ano" secondAttribute="centerX" id="WZ0-uD-4Y3"/>
+                            <constraint firstItem="m7H-ye-TXo" firstAttribute="centerX" secondItem="fvq-iv-Ano" secondAttribute="centerX" id="Wad-ol-Tac"/>
+                            <constraint firstItem="m7H-ye-TXo" firstAttribute="top" secondItem="P7l-eF-Esm" secondAttribute="bottom" constant="20" id="h5Q-ot-ZdA"/>
+                            <constraint firstItem="m7H-ye-TXo" firstAttribute="leading" secondItem="fvq-iv-Ano" secondAttribute="leadingMargin" constant="40" id="jLq-dx-2m6"/>
+                            <constraint firstItem="Odq-53-vpD" firstAttribute="centerX" secondItem="fvq-iv-Ano" secondAttribute="centerX" id="phB-a3-9E0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="m7H-ye-TXo" secondAttribute="trailing" constant="40" id="zf5-KL-awm"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="isImportantSwitch" destination="Odq-53-vpD" id="e3Q-VQ-u5j"/>
+                        <outlet property="taskNameTextField" destination="m7H-ye-TXo" id="EJK-BH-Tke"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XbT-6j-xqN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1844" y="36.431784107946029"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aMP-fV-MDp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2uA-IS-jvZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="h8f-wa-BCp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="NKP-rj-1I4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5qM-oI-Zu9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="221.59999999999999" y="-645.42728635682158"/>
         </scene>
     </scenes>
 </document>
